--- a/HW8_Mock/build.gradle
+++ b/HW8_Mock/build.gradle
@@ -12,5 +12,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.jetbrains', name: 'annotations', version: '15.0'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
 
 }
